[package]
name = "vatsim_utils"
version = "0.3.3"
edition = "2021"
authors = ["Celeo <mattboulanger@fastmail.com>"]
description = "Utilities to interact with VATSIM data"
readme = "README.md"
homepage = "https://github.com/celeo/vatsim_utils"
repository = "https://github.com/celeo/vatsim_utils"
license = "MIT OR Apache-2.0"
exclude = [".github"]
keywords = ["vatsim"]
categories = [
  "api-bindings"
]

[dependencies]
http = "0.2.8"
log = "0.4.17"
once_cell = "1.13.0"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
thiserror = "1.0.32"
