[package]
name = "vatsim_utils"
version = "0.5.4"
edition = "2021"
authors = ["Celeo <mattboulanger@fastmail.com>"]
description = "Utilities to interact with VATSIM data"
readme = "README.md"
homepage = "https://github.com/celeo/vatsim_utils"
repository = "https://github.com/celeo/vatsim_utils"
license = "MIT OR Apache-2.0"
exclude = [".github"]
keywords = ["vatsim"]
categories = [
  "api-bindings"
]

[dependencies]
http = "1.3.1"
log = "0.4.27"
rand = "0.8.5"
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1.0.69"

[features]
default = ["airports"]
airports = []
