[package]
name = "vatsim_utils"
version = "0.5.5"
edition = "2021"
authors = ["Celeo <mattboulanger@fastmail.com>"]
description = "Utilities to interact with VATSIM data"
readme = "README.md"
homepage = "https://github.com/celeo/vatsim_utils"
repository = "https://github.com/celeo/vatsim_utils"
license = "MIT OR Apache-2.0"
exclude = [".github"]
keywords = ["vatsim"]
categories = [
  "api-bindings"
]

[dependencies]
http = "1.3.1"
log = "0.4.28"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[features]
default = ["airports"]
airports = []
